--- a/_posts/2016-05-08-sdm-2016.md
+++ b/_posts/2016-05-08-sdm-2016.md
@@ -1,8 +1,8 @@
 ---
 layout:     post
-title:     	记一则面试
+title:     	SDM 2016
 date:       2016-05-08 00:51:29
-summary:    有趣的面试应当被记录。
+summary:    SDM 2016 @ Florida，新朋友初见，老朋友叙旧。
 categories: life 
 ---
 
